[package]
name = "http_metware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
hyper = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4.13", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
serde_json = "1.0"
pin-project-lite = "0.2"
http = "1.1.0"

